[BDN-880] Add server-side pagination for AppDemandProfiles (#684)
