# internal/admin/openapi/openapi.yaml
@@ -54,7 +54,7 @@ paths:
         - $ref: '#/components/parameters/limit'
       responses:
         '200':
-          description: A list of line items
+          description: A list of Auction Configurations
           content:
             application/json:
               schema:
@@ -161,7 +161,7 @@ paths:
         - $ref: '#/components/parameters/limit'
       responses:
         '200':
-          description: A list of line items
+          description: A list of Auction Configurations
           content:
             application/json:
               schema:
@@ -337,6 +337,30 @@ paths:
               application/json:
                 schema:
                   $ref: './schemas/app-demand-profile.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /api/app_demand_profiles_collection:
+    get:
+      operationId: getAppDemandProfilesCollection
+      summary: List app demand profiles
+      tags:
+        - App Demand Profiles Collection
+      parameters:
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/appId'
+        - $ref: '#/components/parameters/accountId'
+        - $ref: '#/components/parameters/demandSourceId'
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+      responses:
+        '200':
+          description: A list of App Demand Profiles
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './schemas/app-demand-profiles-collection.schema.json'
         default:
           $ref: '#/components/responses/ErrorResponse'
   /api/app_demand_profiles/{id}:
@@ -1168,6 +1192,14 @@ components:
       description: 'Filter by account type'
       schema:
         type: string
+    demandSourceId:
+        name: demand_source_id
+        in: query
+        required: false
+        description: 'Filter by demand source ID'
+        schema:
+          type: integer
+          format: int64
     isBidding:
       name: is_bidding
       in: query
